backends/libinput: Ignore redundant events for pointer buttons and keyboard keys when pressed/released on multiple devices

BUG: 486034


(cherry picked from commit 998be47ac18123c2243c8d56546270acb4de0477)

48450f32 Ignore redundant events for pointer buttons when pressed/released on multiple devices
321e5106 Ignore redundant events for keyboard keys when pressed/released on multiple devices
beaaa6f8 Apply 1 suggestion(s) to 1 file(s)
cf079490 Apply 1 suggestion(s) to 1 file(s)
179a5df4 Apply 1 suggestion(s) to 1 file(s)
f69dfe2d Apply 1 suggestion(s) to 1 file(s)
640f776f Update connection.cpp

Co-authored-by: Bruno Filipe <bmilreu+kde@gmail.com>